--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,8 @@
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Caveat&family=Darumadrop+One&family=Fontdiner+Swanky&family=Gloria+Hallelujah&family=Gochi+Hand&family=Henny+Penny&family=Indie+Flower&family=Irish+Grover&family=Kalam&family=Luckiest+Guy&family=Nanum+Pen+Script&family=Open+Sans:wght@300;400;700&family=Pacifico&family=Permanent+Marker&family=Rock+Salt&family=Shadows+Into+Light&family=Shantell+Sans&family=Slackey&family=Splash&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Caveat&family=Fontdiner+Swanky&family=Henny+Penny&family=Nabla&family=Open+Sans:wght@300;400;700&family=Rubik+Bubbles&display=swap"
 			rel="stylesheet"
 		/>
 		<title>Let's Do Something!</title>
