--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Caveat&family=Fontdiner+Swanky&family=Henny+Penny&family=Nabla&family=Open+Sans:wght@300;400;700&family=Rubik+Bubbles&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Caveat&family=Fontdiner+Swanky&family=Henny+Penny&family=Nabla&family=Open+Sans:wght@300;400;700&family=Rubik+Bubbles&family=Bangers&display=swap"
 			rel="stylesheet"
 		/>
 		<title>Let's Do Something!</title>
